vpc/routes.tf
# Route public subnet traffic through Internet GW
resource "aws_route_table" "public" {
  vpc_id = "${aws_vpc.main.id}"

  tags = {
    "Name" = "${var.name_prefix} Public route table"
  }
}

resource "aws_route" "public_internet_gateway" {
  route_table_id = "${aws_route_table.public.id}"
  destination_cidr_block = "0.0.0.0/0"
  gateway_id = "${aws_internet_gateway.main.id}"
}

resource "aws_route_table_association" "public" {
  route_table_id = "${aws_route_table.public.id}"
  subnet_id = "${element(aws_subnet.public.*.id, count.index)}"
  count = "${length(var.availability_zones)}"
}

resource "aws_route_table" "private" {
  vpc_id = "${aws_vpc.main.id}"
  count = "${length(var.availability_zones)}"

  tags {
    "Name" = "${var.name_prefix} Private route table ${element(var.availability_zones, count.index)}"
  }
}

resource "aws_route" "nat_gateway" {
  count = "${length(var.availability_zones)}"
  route_table_id = "${element(aws_route_table.private.*.id, count.index)}"
  destination_cidr_block = "0.0.0.0/0"
  nat_gateway_id = "${element(aws_nat_gateway.main.*.id, count.index)}"
}

resource "aws_route_table_association" "private" {
  count = "${length(var.availability_zones)}"
  route_table_id = "${element(aws_route_table.private.*.id, count.index)}"
  subnet_id = "${element(aws_subnet.private.*.id, count.index)}"
}
